--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,60 @@
 # OS X
 .DS_Store
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Dirs #
+########
+
+.idea/
+bower_components/
+
+/node_modules
+/tmp
+/dist
+/preview
+/www
+
+/tools/node_modules
+/tools/*.csv
+/tools/*.json
+
+# Cordova
+platforms/
+plugins/
