--- a/package.json
+++ b/package.json
@@ -1,15 +1,30 @@
 {
-  "name": "cordova-app-hello-world",
-  "version": "3.10.1-dev",
-  "description": "This is the hello world app used by the `cordova create` command.",
+  "name": "parcmate-mybeacon",
+  "version": "0.1.0",
+  "description": "A simple iBeacon broadcaster app.",
   "repository": {
     "type": "git",
-    "url": "https://git-wip-us.apache.org/repos/asf/cordova-app-hello-world.git"
+    "url": "https://github.com/parcmate/cordova-poc.git"
   },
   "main": "index.js",
   "keywords": [
     "ecosystem:cordova"
   ],
-  "author": "Apache Software Foundation",
-  "license": "Apache version 2.0"
+  "author": "Parcmate LLC",
+  "license": "Apache version 2.0",
+  "devDependencies": {
+    "connect": "^3.4.0",
+    "grunt": "^0.4.5",
+    "grunt-bower-concat": "^0.6.0",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-jade": "^0.15.0",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-stylus": "^0.22.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-sync": "^0.5.1",
+    "serve-static": "^1.10.0"
+  }
 }
