--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular-ui-router": "~0.2.15",
     "ngCordova": "~0.1.24-alpha",
     "angular-local-storage": "~0.2.3",
+    "angular-deferred-bootstrap": "~0.1.9",
     "bootstrap-stylus": "~5.0.2"
   },
   "overrides": {
